[tool.poetry]
name = "codeclub-tetris"
version = "0.1.0"
description = ""
authors = ["Jyrno Ader <jyrno@thorgate.eu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
